<resources>
    <string name="app_name">Friend\'sGame</string>
    <string name="text_welcome">Welcome to Friend\'sGame !</string>
    <string name="button_play">Play</string>
    <string name="text_devices">Devices:</string>
    <string name="text_ranking">Ranking:</string>
    <string name="text_explication"></string>
    <string name="button_ok">OK !</string>
    <string name="text_explanations">INFO</string>
    <string name="button_wifi">WIFI</string>
    <string name="button_search">Search</string>
    <string name="text_status">Status: </string>
    <string name="text_diceTableScore">Scoreboard per round</string>
    <string name="text_diceFinalScore">Final score:</string>
    <string name="text_diceGame">Shake your phone and look at your score!</string>
    <string name="text_tapGame">Tap the buzzer as many times as possible in 30 seconds!</string>
    <string name="text_math">Find the solution! Beware, you only have 45 seconds per calculation.</string>
    <string name="text_gesture">Make the moves that will appear at the bottom of your screen.</string>
    <string name="text_practice">Choose the game you want to train for</string>
    <string name="text_tapScore">Score:</string>
    <string name="button_finish">Finish</string>
    <string name="create_account">Create Account</string>
    <string name="username_cannot_empty">Username cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="email_not_valid">Email must be valid</string>
    <string name="text_lumino">Try to get the highest brightness in 10 seconds.</string>
</resources>