<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/bungee_shade"
            android:text="@string/text_welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_wifi"
                style="@style/cardViewStyle"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="31dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        app:srcCompat="@drawable/wifi" />

                    <TextView
                        android:id="@+id/tv_wifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_marginTop="7dp"
                        android:textSize="15sp"
                        android:text="@string/button_wifi"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_explanations"
                style="@style/cardViewStyle"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="31dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        app:srcCompat="@drawable/explanations" />

                    <TextView
                        android:id="@+id/tv_explanations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_marginTop="7dp"
                        android:textSize="15sp"
                        android:text="@string/text_explanations"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_search"
                style="@style/cardViewStyle"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="31dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        app:srcCompat="@drawable/loupe" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_marginTop="7dp"
                        android:textSize="15sp"
                        android:text="SEARCH"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/text_status" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:hint="Enter a name"
                app:backgroundTint="#979494" />

            <Button
                android:id="@+id/bt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/alfa_slab_one"
                android:text="DONE"
                android:textSize="15sp"
                app:backgroundTint="#979494"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/audiowide"
                android:gravity="center"
                android:text="Your name : "
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/audiowide"
                android:gravity="center"
                android:textSize="17sp"
                app:backgroundTint="#979494" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/button_play"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/audiowide"
                android:text="@string/text_devices" />

            <ListView
                android:id="@+id/lv_devices"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scrollbars="vertical"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"
                android:background="#DFDCDC" />

            <TextView
                android:id="@+id/tv_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/text_ranking" />

            <ListView
                android:id="@+id/lv_ranking"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scrollbars="vertical"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"
                android:background="#F1E9A0" />

        </LinearLayout>

    </LinearLayout>



</ScrollView>