<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_width="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_diceBack"
                app:srcCompat="@drawable/arrow"
                tools:ignore="VectorDrawableCompat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="invisible"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"/>


            <ImageView
                android:id="@+id/iv_diceAgain"
                app:srcCompat="@drawable/replay"
                tools:ignore="VectorDrawableCompat"
                android:layout_width="35dp"
                android:visibility="invisible"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_diceGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/bungee_shade"
            android:gravity="center"
            android:text="@string/text_diceGame"
            android:textSize="20sp" />

        <TableLayout
            android:id="@+id/tbl_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/title_score"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/audiowide"
                    android:gravity="center_horizontal"
                    android:text="@string/text_diceTableScore"
                    android:textSize="16sp" />

            </TableRow>
            <TableRow
                android:layout_width="389dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title_round1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo_thambi"
                        android:gravity="center_horizontal"
                        android:text="Round 1"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/title_round2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo_thambi"
                        android:gravity="center_horizontal"
                        android:text="Round 2"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/title_round3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo_thambi"
                        android:gravity="center_horizontal"
                        android:text="Round 3"
                        android:textSize="14sp" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_value1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo_thambi"
                        android:gravity="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_value2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo_thambi"
                        android:gravity="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_value3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo_thambi"
                        android:gravity="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tv_tapScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/text_diceFinalScore"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/iv_dee"
            android:layout_width="247dp"
            android:layout_height="348dp"
            app:srcCompat="@drawable/dice6" />

    </LinearLayout>

</ScrollView>
